--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/kob-e/nodejs-exercise#readme",
   "dependencies": {
     "angular": "^1.6.8",
+    "angular-middleware": "^2.1.9",
     "angular-modal": "^0.5.0",
     "angular-route": "^1.6.8",
     "body-parser": "^1.18.2",
