--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "luhn": "^2.1.0",
     "md5": "^2.2.1",
     "multer": "^1.3.0",
     "mysql": "^2.15.0"
